<?xml version="1.0"?>
<package format="2">
  <name>rovi_csp</name>
  <version>1.0.0</version>
  <description>Crank Shaft Pick and Place</description>

  <maintainer email="ca-giken@c-able.ne.jp">KazukiHiraizumi</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/YOODS/</url>
  <author email="ca-giken@c-able.ne.jp">KazukiHiraizumi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rovi</depend>
  <depend>rovi_utils</depend>
  <depend>rovi_visual_teach</depend>
</package>
